Bug 423672 - org.kde.pim.imapresource: Failed to create folder on server: "Create failed, server replied: ... NO Mailbox already exists ... [ ALREADYEXISTS ]"
Summary: org.kde.pim.imapresource: Failed to create folder on server: "Create failed, ...
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: IMAP resource (other bugs)
Version First Reported In: 5.14.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-06-29 21:14 UTC by Dennis Schridde
Modified: 2020-08-09 08:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
kimap-20.04.2-create-alreadyexists-is-not-an-error.patch (4.16 KB, patch)
2020-07-05 15:50 UTC, Dennis Schridde
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dennis Schridde 2020-06-29 21:14:50 UTC
SUMMARY

It appears that the Akonadi IMAP resource aborts synchronisation with a server if a mailbox it is supposed to create already exists:  When I try to synchronise one of my IMAP accounts from KMail, the synchronisation quickly aborts and on the console where ran `akonadictl restart` I see:
org.kde.pim.imapresource: Failed to create folder on server:  "Create failed, server replied: A000239 NO Mailbox already exists ( 0.001 + 0.000 secs ) . [ ALREADYEXISTS  ]"

It could be that the mailbox was created through another Akonadi IMAP resource on another computer, or it could have been created by the same Akonadi IMAP resource on this computer, but with it crashing during the sync.

For examples of reports of the latter, see these bugs:

* bug #418593
* bug #418595
* bug #418599
* bug #418912


STEPS TO REPRODUCE (assumption)

1. Create a new folder for an IMAP account using an Akonadi client
2. Have Akonadi go out of sync with the IMAP server
3. Have the folder already on the IMAP server, e.g. due to an incomplete sync
4. Try to synchronise the Akonadi IMAP resource with that same server


OBSERVED RESULT

* org.kde.pim.imapresource: Failed to create folder on server:  "Create failed, server replied: A000239 NO Mailbox already exists ( 0.001 + 0.000 secs ) . [ ALREADYEXISTS  ]"
* Emails are not being synchronised to my computer


EXPECTED RESULT

* No error output in the console where I started `akonadictl restart`
* Synchronisation with the IMAP server succeeds and the freshest emails are available for me on my computer


SOFTWARE/OS VERSIONS

Operating System: Gentoo Linux
KDE Plasma Version: 5.19.2
KDE Frameworks Version: 5.71.0
Qt Version: 5.15.0
Kernel Version: 5.7.6
OS Type: 64-bit
Processors: 8 × AMD Ryzen 5 2400G with Radeon Vega Graphics
Memory: 13,5 GiB of RAM
Graphics Processor: AMD RAVEN


ADDITIONAL INFORMATION

Portage 2.3.103 (python 3.6.9-final-0, default/linux/amd64/17.1/desktop/plasma/systemd, gcc-10.1.0, glibc-2.31-r5, 5.7.6 x86_64)
=================================================================
System uname: Linux-5.7.6-x86_64-AMD_Ryzen_5_2400G_with_Radeon_Vega_Graphics-with-gentoo-2.7
KiB Mem:    14128436 total,    627308 free
KiB Swap:          0 total,         0 free
Timestamp of repository gentoo: Mon, 29 Jun 2020 19:45:01 +0000
Head commit of repository gentoo: 394fae18295de1e22d897cd0ad31b1dc5b3ca6b0
Head commit of repository flatpak-overlay: 35c52dcaeffa51a7b3c681c5ade8a6f0978e3d54

Head commit of repository local: 4efaf55c4086be09ab650f5ae4137e8eeae4dbb5

sh bash 5.0_p17
ld GNU gold (Gentoo 2.34 p4 2.34.0) 1.16
ccache version 3.7.10 [disabled]
app-shells/bash:          5.0_p17::gentoo
dev-java/java-config:     2.3.1::gentoo
dev-lang/perl:            5.30.3-r1::gentoo
dev-lang/python:          2.7.18::gentoo, 3.6.10-r2::gentoo, 3.7.8::gentoo, 3.8.3::gentoo, 3.9.0_beta3::gentoo
dev-util/ccache:          3.7.10::gentoo
dev-util/cmake:           3.17.3::gentoo
dev-util/pkgconfig:       0.29.2::gentoo
sys-apps/baselayout:      2.7::gentoo
sys-apps/sandbox:         2.20::gentoo
sys-devel/autoconf:       2.13-r1::gentoo, 2.69-r5::gentoo
sys-devel/automake:       1.13.4-r2::gentoo, 1.16.2::gentoo
sys-devel/binutils:       2.34-r1::gentoo
sys-devel/gcc:            10.1.0-r1::gentoo
sys-devel/gcc-config:     2.3.1::gentoo
sys-devel/libtool:        2.4.6-r6::gentoo
sys-devel/make:           4.3::gentoo
sys-kernel/linux-headers: 5.7::gentoo (virtual/os-headers)
sys-libs/glibc:           2.31-r5::gentoo
Repositories:

gentoo
    location: /var/cache/portage/gentoo
    sync-type: rsync
    sync-uri: rsync://rsync.de.gentoo.org/gentoo-portage
    priority: -1000
    sync-rsync-extra-opts: --new-compress
    sync-rsync-verify-jobs: 1
    sync-rsync-verify-max-age: 24
    sync-rsync-verify-metamanifest: yes

flatpak-overlay
    location: /var/db/repos/flatpak-overlay
    sync-type: git
    sync-uri: https://github.com/fosero/flatpak-overlay.git
    masters: gentoo

crossdev
    location: /var/cache/portage/crossdev
    masters: gentoo
    priority: 100

local
    location: /var/cache/portage/local
    sync-type: git
    sync-uri: https://github.com/devurandom/gentoo-overlay.git
    masters: gentoo
    priority: 1000

ACCEPT_KEYWORDS="amd64 ~amd64"
ACCEPT_LICENSE="@FREE"
CBUILD="x86_64-pc-linux-gnu"
CFLAGS="-pipe -O2 -march=znver1"
CHOST="x86_64-pc-linux-gnu"
CONFIG_PROTECT="/etc /etc/grs/systems.conf /usr/lib64/libreoffice/program/sofficerc /usr/share/config /usr/share/gnupg/qualified.txt /usr/share/maven-bin-3.6/conf"
CONFIG_PROTECT_MASK="/etc/ca-certificates.conf /etc/dconf /etc/env.d /etc/fonts/fonts.conf /etc/gconf /etc/gentoo-release /etc/revdep-rebuild /etc/sandbox.d /etc/terminfo /etc/texmf/language.dat.d /etc/texmf/language.def.d /etc/texmf/updmap.d /etc/texmf/web2c"
CXXFLAGS="-pipe -O2 -march=znver1"
DISTDIR="/var/cache/portage/distfiles"
EMERGE_DEFAULT_OPTS="--nospinner"
ENV_UNSET="DBUS_SESSION_BUS_ADDRESS DISPLAY GOBIN GOPATH PERL5LIB PERL5OPT PERLPREFIX PERL_CORE PERL_MB_OPT PERL_MM_OPT XAUTHORITY XDG_CACHE_HOME XDG_CONFIG_HOME XDG_DATA_HOME XDG_RUNTIME_DIR"
FCFLAGS="-O2 -pipe"
FEATURES="assume-digests binpkg-docompress binpkg-dostrip binpkg-logs buildsyspkg cgroup compressdebug config-protect-if-modified distlocks ebuild-locks fakeroot fixlafiles ipc-sandbox merge-sync mount-sandbox multilib-strict network-sandbox news parallel-fetch parallel-install pid-sandbox preserve-libs protect-owned qa-unresolved-soname-deps sandbox sfperms strict unknown-features-warn unmerge-logs unmerge-orphans userfetch userpriv usersandbox usersync xattr"
FFLAGS="-O2 -pipe"
GENTOO_MIRRORS="http://ftp.spline.inf.fu-berlin.de/mirrors/gentoo/ http://ftp-stud.hs-esslingen.de/pub/Mirrors/gentoo/ http://distfiles.gentoo.org"
LANG="en_US.UTF-8"
LDFLAGS="-Wl,-O1 -Wl,--as-needed -Wl,--hash-style=gnu"
MAKEOPTS="-j6 -l4"
PKGDIR="/var/cache/portage/packages"
PORTAGE_CONFIGROOT="/"
PORTAGE_RSYNC_EXTRA_OPTS="--new-compress"
PORTAGE_RSYNC_OPTS="--recursive --links --safe-links --perms --times --omit-dir-times --compress --force --whole-file --delete --stats --human-readable --timeout=180 --exclude=/distfiles --exclude=/local --exclude=/packages --exclude=/.git"
PORTAGE_TMPDIR="/tmp"
USE="7z 7zip X a52 aac aacplus aacs acl acpi activities aio alsa amd64 appindicator appstream archive audit avahi ayatana bdplus berkdb blake2 bluetooth bluray bpf branding brotli bs2b btrfs bzip2 cairo caps cdda cddb cdio cdr celt chromaprint cjk clang cli clipboard color-management colord conntrack crypt cups d3d9 dav1d dbus declarative device-mapper dirac djvu dri drm dts dvb dvd dvdr ed25519 editorconfig egl elf emboss encode epub evdev exif faudio fax fbcon fdk ffmpeg fftw filecaps firefox firewalld fish-completion fits flac fontconfig fontforge fortran fribidi gamepad gbm gdal gdbm geoclue geolocation gif git gles2 gmp gnome-online-accounts gnupg google googledrive gpg gps graphicsmagick gstreamer gtk gtk3 gzip harfbuzz hdf5 heif http2 ibus iconv icu idn imlib inotify introspection ipv6 iwd jemalloc jpeg jpeg2k json kde kipi kms kwallet ladspa latex lcms libatomic libglvnd libidn2 libinput libnotify libproxy libsecret libsoxr libtirpc libvirt lm-sensors lrz lv2 lvm lz4 lzma lzo mad mariadb markdown mbim mercurial mjpeg mng mobi modemmanager modplug mp3 mp4 mpeg mplayer mpris mtp multilib mysql ncurses netlink networkmanager nftables nls nptl numa office ofono ofx ogg openal opencl opencv openexr opengl openh264 openmax openmp opus pam pango pcap pch pcre pcre2 pdf pgo phonon pixman pkcs11 pkcs7 plasma pm-utils png policykit postscript ppds prison pulseaudio pwquality python qml qrcode qt5 raw rdp readline redfish samba sasl scanner schroedinger screencast sctp sdl sdl2 seccomp semantic-desktop share smartcard snappy sparse speech speex spell spice ssl startup-notification steamruntime stemmer svg systemd systemtap tbb tcpd teamd telemetry telepathy tga theora threads thunderbolt tiff timezone tmux truetype tslib udev udisks uinput unicode unwind upnp upnp-av upower usb utempter v4l v4l2 vaapi vdpau vkd3d vorbis vpx vulkan wasm wavpack wayland webchannel webengine webp widgets wireguard wmf woff2 wps x264 x265 xattr xcb xinerama xkb xml xmp xrandr xscreensaver xv xvid xwayland xxhash xz yaml zeroconf zeromq zimg zlib zstd" ABI_X86="64" ADA_TARGET="gnat_2018" ALSA_CARDS="hda-intel" APACHE2_MODULES="authn_core authz_core socache_shmcb unixd actions alias auth_basic authn_alias authn_anon authn_dbm authn_default authn_file authz_dbm authz_default authz_groupfile authz_host authz_owner authz_user autoindex cache cgi cgid dav dav_fs dav_lock deflate dir disk_cache env expires ext_filter file_cache filter headers include info log_config logio mem_cache mime mime_magic negotiation rewrite setenvif speling status unique_id userdir usertrack vhost_alias" CALLIGRA_FEATURES="karbon sheets words" CAMERAS="ptp2" COLLECTD_PLUGINS="df interface irq load memory rrdtool swap syslog" CPU_FLAGS_X86="aes avx avx2 f16c fma3 mmx mmxext pclmul popcnt sha sse sse2 sse3 sse4_1 sse4_2 sse4a ssse3" ELIBC="glibc" ENLIGHTENMENT_MODULES="*" GPSD_PROTOCOLS="ashtech aivdm earthmate evermore fv18 garmin garmintxt gpsclock greis isync itrax mtk3301 nmea ntrip navcom oceanserver oldstyle oncore rtcm104v2 rtcm104v3 sirf skytraq superstar2 timing tsip tripmate tnt ublox ubx" GRUB_PLATFORMS="efi-64" INPUT_DEVICES="joystick libinput" KERNEL="linux" L10N="de de-DE en en-GB ar fa tr ja ko zh zh-CN zh-TW" LCD_DEVICES="bayrad cfontz cfontz633 glk hd44780 lb216 lcdm001 mtxorb ncurses text" LIBREOFFICE_EXTENSIONS="nlpsolver scripting-javascript wiki-publisher" LIRC_DEVICES="devinput" LLVM_TARGETS="AMDGPU BPF RISCV WebAssembly" LUA_TARGET="lua5-2" OFFICE_IMPLEMENTATION="libreoffice" PHP_TARGETS="php7-2" POSTGRES_TARGETS="postgres10 postgres11" PYTHON_SINGLE_TARGET="python3_7" PYTHON_TARGETS="python2_7 python3_7 pypy pypy3" QEMU_SOFTMMU_TARGETS="riscv32 riscv64 x86_64" QEMU_USER_TARGETS="riscv32 riscv64" RUBY_TARGETS="ruby25" USERLAND="GNU" VIDEO_CARDS="amdgpu virgl" XTABLES_ADDONS="quota2 psd pknock lscan length2 ipv4options ipset ipp2p iface geoip fuzzy condition tee tarpit sysrq steal rawnat logmark ipmark dhcpmac delude chaos account"
Unset:  CC, CPPFLAGS, CTARGET, CXX, INSTALL_MASK, LC_ALL, LINGUAS, PORTAGE_BINHOST, PORTAGE_BUNZIP2_COMMAND, PORTAGE_COMPRESS, PORTAGE_COMPRESS_FLAGS
Comment 1 Dennis Schridde 2020-06-29 21:16:16 UTC
P.S. Expected behaviour on code-level: When the error is ALREADYEXISTS, Akonadi should consider the creation of the mailbox successful and continue the sync, i.e. mailbox creation should be idempotent.
Comment 2 Dennis Schridde 2020-07-05 15:50:03 UTC
Created attachment 129920 [details]
kimap-20.04.2-create-alreadyexists-is-not-an-error.patch

Attached patch fixes the issue in in KIMAP 20.04.2 by making CREATE and DELETE idempotent.

If CREATE fails with an ALREADYEXISTS response code, that is not an error since the intended result (the object existing at the target location) has been achieved.

Likewise, if DELETE fails with an NONEXISTENT response code, that is not an error since the intended result (the object being gone from the target location) has been achieved.

Please note that for RENAME response code ALREADYEXISTS *is* an error since the content of the source folder was not moved as intended.

cf. https://tools.ietf.org/html/rfc5530#section-3
Comment 3 Christophe Marin 2020-07-05 18:29:32 UTC
Please create a merge request: https://invent.kde.org/pim/kimap
Comment 4 Dennis Schridde 2020-07-05 20:41:22 UTC
(In reply to Christophe Giboudeaux from comment #3)
> Please create a merge request: https://invent.kde.org/pim/kimap

https://invent.kde.org/pim/kimap/-/merge_requests/3
Comment 5 Daniel Vrátil 2020-07-07 17:57:49 UTC
Git commit ee2900e3539483b6f3d5eadfcf8cfc9c6ed42abe by Daniel Vrátil, on behalf of Dennis Schridde.
Committed on 07/07/2020 at 17:49.
Pushed by dvratil into branch 'master'.

Idempotent CREATE and DELETE

If CREATE fails with an ALREADYEXISTS response code, that is not an error
since the intended result (the object existing at the target location)
has been achieved.

Likewise, if DELETE fails with an NONEXISTENT response code, that is
not an error since the intended result (the object being gone from
the target location) has been achieved.

Please note that for RENAME response code ALREADYEXISTS *is* an error
since the content of the source folder was not moved as intended.

cf. https://tools.ietf.org/html/rfc5530#section-3

M  +27   -0    src/createjob.cpp
M  +1    -0    src/createjob.h
M  +27   -0    src/deletejob.cpp
M  +1    -0    src/deletejob.h

https://invent.kde.org/pim/kimap/commit/ee2900e3539483b6f3d5eadfcf8cfc9c6ed42abe
Comment 6 Christian Mollekopf 2020-08-06 13:08:12 UTC
Git commit ce0e9873d3a897fee7fd9f8f7649ef4abd3c4627 by Christian Mollekopf, on behalf of Dennis Schridde.
Committed on 06/08/2020 at 12:59.
Pushed by cmollekopf into branch 'master'.

Idempotent CREATE and DELETE

If CREATE fails with an ALREADYEXISTS response code, that is not an error
since the intended result (the object existing at the target location)
has been achieved.

Likewise, if DELETE fails with an NONEXISTENT response code, that is
not an error since the intended result (the object being gone from
the target location) has been achieved.

Please note that for RENAME response code ALREADYEXISTS *is* an error
since the content of the source folder was not moved as intended.

cf. https://tools.ietf.org/html/rfc5530#section-3

M  +27   -0    src/createjob.cpp
M  +2    -1    src/createjob.h
M  +27   -0    src/deletejob.cpp
M  +2    -1    src/deletejob.h

https://invent.kde.org/pim/kimap2/commit/ce0e9873d3a897fee7fd9f8f7649ef4abd3c4627