src/createjob.h
@@ -57,6 +57,7 @@ public:
 
 protected:
     void doStart() override;
+    void handleResponse(const Response &response) override;
 };
 
 }
