src/deletejob.h
@@ -53,6 +53,7 @@ public:
 
 protected:
     void doStart() override;
+    void handleResponse(const Response &response) override;
 };
 
 }
